{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 114,
  "lineage": "02fb84bb-3ca8-5f1d-89a1-8791f4b3829a",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "vvv_application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/lb-tf/eb73567b4a2b0c74",
            "arn_suffix": "app/lb-tf/eb73567b4a2b0c74",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-tf-784341718.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/lb-tf/eb73567b4a2b0c74",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-044dd451a0b8c93f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0533e7229adbf4d9c"
              },
              {
                "subnet_id": "subnet-07250d3956dbea3ee"
              },
              {
                "subnet_id": "subnet-0da500906befb47f5"
              }
            ],
            "subnets": [
              "subnet-0533e7229adbf4d9c",
              "subnet-07250d3956dbea3ee",
              "subnet-0da500906befb47f5"
            ],
            "vpc_id": "vpc-0b2e0323a6a081dad",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.vvv_load_balancer_security_group",
            "module.network.aws_default_subnet.vvv_subnet_a",
            "module.network.aws_default_subnet.vvv_subnet_b",
            "module.network.aws_default_subnet.vvv_subnet_c"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vvv_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/lb-tf/eb73567b4a2b0c74/5b1fc580a8817ba3",
            "certificate_arn": "arn:aws:acm:us-east-1:564141216590:certificate/3a2f0d25-ab5e-4c2f-9849-45509c87ff89",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/vvv-target-group/d16c7b813142c7a1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/lb-tf/eb73567b4a2b0c74/5b1fc580a8817ba3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/lb-tf/eb73567b4a2b0c74",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_alb.vvv_application_load_balancer",
            "module.load_balancer.aws_lb_target_group.vvv_target_group",
            "module.load_balancer.aws_security_group.vvv_load_balancer_security_group",
            "module.network.aws_default_subnet.vvv_subnet_a",
            "module.network.aws_default_subnet.vvv_subnet_b",
            "module.network.aws_default_subnet.vvv_subnet_c",
            "module.network.aws_default_vpc.vvv_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vvv_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/lb-tf/eb73567b4a2b0c74/8cb6d3ae17eb4163",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/vvv-target-group/d16c7b813142c7a1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/lb-tf/eb73567b4a2b0c74/8cb6d3ae17eb4163",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/lb-tf/eb73567b4a2b0c74",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_alb.vvv_application_load_balancer",
            "module.load_balancer.aws_lb_target_group.vvv_target_group",
            "module.load_balancer.aws_security_group.vvv_load_balancer_security_group",
            "module.network.aws_default_subnet.vvv_subnet_a",
            "module.network.aws_default_subnet.vvv_subnet_b",
            "module.network.aws_default_subnet.vvv_subnet_c",
            "module.network.aws_default_vpc.vvv_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vvv_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/vvv-target-group/d16c7b813142c7a1",
            "arn_suffix": "targetgroup/vvv-target-group/d16c7b813142c7a1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/vvv-target-group/d16c7b813142c7a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vvv-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b2e0323a6a081dad"
          },
          "dependencies": [
            "module.network.aws_default_vpc.vvv_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vvv_load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:security-group/sg-044dd451a0b8c93f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044dd451a0b8c93f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20221121145908017800000001",
            "name_prefix": "terraform-",
            "owner_id": "564141216590",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2e0323a6a081dad"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vvv_service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:security-group/sg-0b8250ce4b548ba1e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8250ce4b548ba1e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-044dd451a0b8c93f1"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221121145914501300000002",
            "name_prefix": "terraform-",
            "owner_id": "564141216590",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2e0323a6a081dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_security_group.vvv_load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "vvv_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:subnet/subnet-0533e7229adbf4d9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0533e7229adbf4d9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564141216590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ultima_a"
            },
            "tags_all": {
              "Name": "ultima_a"
            },
            "vpc_id": "vpc-0b2e0323a6a081dad"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "vvv_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:subnet/subnet-07250d3956dbea3ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-07250d3956dbea3ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564141216590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ultima_b"
            },
            "tags_all": {
              "Name": "ultima_b"
            },
            "vpc_id": "vpc-0b2e0323a6a081dad"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "vvv_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:subnet/subnet-0da500906befb47f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0da500906befb47f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564141216590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ultima_c"
            },
            "tags_all": {
              "Name": "ultima_c"
            },
            "vpc_id": "vpc-0b2e0323a6a081dad"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "vvv_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:vpc/vpc-0b2e0323a6a081dad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-095da7495d9f9777b",
            "default_route_table_id": "rtb-0372e234c1b44922c",
            "default_security_group_id": "sg-028b3fea82d29fcbf",
            "dhcp_options_id": "dopt-08c815188b5726aa2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0b2e0323a6a081dad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0372e234c1b44922c",
            "owner_id": "564141216590",
            "tags": {
              "Name": "ultima"
            },
            "tags_all": {
              "Name": "ultima"
            }
          }
        }
      ]
    }
  ]
}